task - ledger: add tests and enable to test scheduled jobs manually
